--- a/小專題v2css.css
+++ b/小專題v2css.css
@@ -57,15 +57,15 @@ body {
 }
 
 .radial-menu-main-button {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: rgba(220, 10, 10, 0.5);
     /* 主按鈕顏色 */
     color: white;
     border: none;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,8 +106,8 @@ body {
 
 .radial-menu-item {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: rgba(220, 10, 10, 0.5);
     /* 子按鈕顏色 */
@@ -142,20 +142,20 @@ body {
 
 /* 當 .open 類別被添加時，子按鈕的位置和顯示 */
 .radial-menu-items.open .radial-menu-item:nth-child(1) {
-    transform: translate(-80px, -10px);
-    /* 向左上方偏移 */
+    transform: translate(110px, 0px);
+    /* 向右偏移 */
     opacity: 1;
 }
 
 .radial-menu-items.open .radial-menu-item:nth-child(2) {
-    transform: translate(-150px, -50px);
-    /* 向左上方偏移 */
+    transform: translate(220px, 0px);
+    /* 向右偏移 */
     opacity: 1;
 }
 
 .radial-menu-items.open .radial-menu-item:nth-child(3) {
-    transform: translate(-220px, -100px);
-    /* 向左上方偏移 */
+    transform: translate(330px, 0px);
+    /* 向右偏移 */
     opacity: 1;
 }
 
