--- a/小專題v2css.css
+++ b/小專題v2css.css
@@ -6,6 +6,12 @@ body {
     background-size: 100% 100%;
 }
 
+@media (min-width: 1200px) {
+    body {
+        background-image: linear-gradient(to top, #1f1266c2 0%, #fd834b 10%, #ff7882 20%, #7046aa 60%, #4d23c2 87%, #4318dddc 100%);
+    }
+}
+
 
 /* 輪播圖 */
 /* 輪播圖高度固定 */
@@ -19,7 +25,7 @@ body {
 @media (max-width: 700px) {
     #carousel .carousel-inner .carousel-item img {
         height: 200px;
-        object-fit: contain;
+        /* object-fit: contain; */
     }
 }
 
